--- a/client/templates/Module/add_section.html
+++ b/client/templates/Module/add_section.html
@@ -4,12 +4,20 @@
 {% block content %}
     <div class="content">
         <h2 class="page-title">Add New Section</h2>
-        <link rel="stylesheet" href="{% static 'client/css/add_module.css' %}">
 
         <form method="POST">
             {% csrf_token %}
-            {{ form.as_p }}
             
+            <div class="form-group">
+                <label for="{{ form.title.id_for_label }}">{{ form.title.label }}</label>
+                {{ form.title }}
+            </div>
+
+            <div class="form-group">
+                <label for="{{ form.description.id_for_label }}">{{ form.description.label }}</label>
+                {{ form.description }}
+            </div>
+
             <button type="submit" class="save-btn">Save Section</button>
         </form>
     </div>
