--- a/users/templates/users/partials/navbar.html
+++ b/users/templates/users/partials/navbar.html
@@ -6,21 +6,27 @@
     </div>
     <ul class="nav-links">
         <li>
-            <a href="{% url 'dashboard' %}" class="{%if request.path == '/dashboard/' %}active{% endif %}">
+            <a href="{% url 'dashboard' %}" class="{% if request.path == '/dashboard/' %}active{% endif %}">
                 <img src="{% static 'users/img/dashboard.svg' %}" alt="Dashboard" class="icon">
                 <span>Dashboard</span>
             </a>
         </li>
         <li>
-            <a href="{% url 'userModules' %}" class="{%if request.path == '/userModules/' %}active{% endif %}">
+            <a href="{% url 'userModules' %}" class="{% if request.path == '/userModules/' %}active{% endif %}">
                 <img src="{% static 'users/img/modules.svg' %}" alt="Modules" class="icon">
                 <span>Modules</span>
             </a>
         </li>
         <li>
-            <a href="{% url 'profile' %}" class="{%if request.path == '/profile/' %}active{% endif %}">
+            <a href="{% url 'profile' %}" class="{% if request.path == '/profile/' %}active{% endif %}">
                 <img src="{% static 'users/img/profile.svg' %}" alt="Profile" class="icon">
                 <span>Profile</span>
+            </a>
+        </li>
+        <li> 
+            <a href="{% url 'journal_page' %}" class="{% if request.path == '/journal/' %}active{% endif %}">
+                <img src="{% static 'users/img/journal.svg' %}" alt="Journal" class="icon">
+                <span>Journal</span>
             </a>
         </li>
         <div class="logout">
@@ -29,11 +35,9 @@
                 <span>Logout</span>
             </a>
         </div>
-        
     </ul>
 
     <div class="toggle">
         <img src="{% static 'users/img/toggle.svg' %}" alt="Toggle Menu" class="toggleIcon">
     </div>
-
-</div>
+</div> 
