Add reset password section in the log in page.

--- a/users/templates/users/log_in.html
+++ b/users/templates/users/log_in.html
@@ -35,7 +35,7 @@
                 <button type="submit">Log In</button>
             </form>
             <a href="{% url 'sign_up_step_1' %}">Dont have an account? Sign Up</a>
-            <a href="#">Forget password?</a>
+            <a href="{% url 'reset_password' %}">Forget password?</a>
         </div>
     </div>
 
