Organized file structure and everything is working

--- a/client/templates/client/view_responders.html
+++ b/client/templates/client/view_responders.html
@@ -4,7 +4,7 @@
 {% block title %}Responders - {{ questionnaire.title }}{% endblock %}
 
 {% block extra_css %}
-    <link rel="stylesheet" href="{% static 'css/view_responders.css' %}">
+    <link rel="stylesheet" href="{% static 'client/css/view_responders.css' %}">
 {% endblock %}
 
 {% block content %}
