--- a/client/templates/client/view_questionnaire.html
+++ b/client/templates/client/view_questionnaire.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>{{ questionnaire.title }}</title>
-    <link rel="stylesheet" href="{% static 'css/view_questionnaire.css' %}">
+    <link rel="stylesheet" href="{% static 'client/css/view_questionnaire.css' %}">
 </head>
 <body>
 
