--- a/users/templates/users/questionnaire.html
+++ b/users/templates/users/questionnaire.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Onboarding Questionnaire</title>
-    <link rel="stylesheet" href="{% static 'css/onboarding.css' %}">
+    <link rel="stylesheet" href="{% static 'css/questionnaire.css' %}">
     {% csrf_token %}
     <meta name="csrf-token" content="{{ csrf_token }}">
 </head>
