--- a/users/templates/users/welcome.html
+++ b/users/templates/users/welcome.html
@@ -2,7 +2,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <link rel="stylesheet" href="{% static 'css/onboarding.css' %}">
+    <link rel="stylesheet" href="{% static 'css/questionnaire.css' %}">
     <title>{% block title %}Welcome to ReWork{% endblock %}</title>
 </head>
 <body>
